--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Val´s Store</title>
   </head>
   <body>
-      <img src="C:\Users\Mario\Desktop\Exposicion\image\logo.png" alt="logo val´s" align="right">
+      <img id="destacada" src="C:\Users\Mario\Desktop\Exposicion\image\logo.png" alt="logo val´s" align="right">
+      <br>
+      <br>
+        <h1>Trendy Fashion Style Women's Clothing Online Shopping</h1>
+        <br>
+        <h2>Women</h2>
+        <br>
+      <img src="C:\Users\Mario\Desktop\Exposicion\image\blusas.jpg" alt="" width="300px">
+          <a href="ropa.html" target="_blank">See more..</a>
+       <h2>Shoes</h2>
+       <br>
+     <img src="C:\Users\Mario\Desktop\Exposicion\image\zapatos.jpg" alt="" width="300px">
+         <a href="ropa.html" target="_blank">See more..</a>
+      <h2>Sport collection!</h2>
+      <br>
+    <img src="C:\Users\Mario\Desktop\Exposicion\image\deportiva.jpg" alt="" width="300px">
+        <a href="ropa.html" target="_blank">See more..</a>
+     <h2>Accesories</h2>
+     <br>
+   <img src="C:\Users\Mario\Desktop\Exposicion\image\accesorios.png" alt="" width="300px">
+       <a href="ropa.html" target="_blank">See more..</a>
+    <h2>Dresses</h2>
+    <br>
+  <img src="C:\Users\Mario\Desktop\Exposicion\image\vestido.jpg" alt="" width="300px">
+      <a href="ropa.html" target="_blank">See more..</a>
   </body>
 </html>
